<resources>
    <!-- Nombre de la app -->
    <string name="app_name">AppSportMate</string>

    <!-- Actividades -->
    <string name="title_activity_formulario_usuario">Formulario Usuario</string>
    <string name="title_activity_formulario_ayuntamiento">Formulario Ayuntamiento</string>
    <string name="title_activity_gestion_eventos">Gestión de Eventos</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="title_activity_register">Registro</string>
    <string name="title_activity_main">Inicio</string>

    <!-- Formularios comunes -->
    <string name="prompt_alias">Alias</string>
    <string name="prompt_nombre">Nombre</string>
    <string name="prompt_apellidos">Apellidos</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_password_repeat">Repetir contraseña</string>
    <string name="prompt_comunidad">Comunidad</string>
    <string name="prompt_provincia">Provincia</string>
    <string name="prompt_ciudad">Ciudad</string>
    <string name="prompt_pueblo">Pueblo</string>
    <string name="prompt_razon_social">Razón Social</string>

    <!-- Botones / Acciones -->
    <string name="action_sign_in">Inicia sesión o regístrate</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="login">Login</string>
    <string name="logout">Cerrar sesión</string>
    <string name="guardar">Guardar</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="volver">Volver</string>
    <string name="crear_evento">Crear evento</string>
    <string name="gestionar_eventos">Gestionar eventos</string>
    <string name="inscribirse">Inscribirse</string>
    <string name="expulsar">Expulsar</string>

    <!-- Mensajes -->
    <string name="welcome">¡Bienvenido!</string>
    <string name="invalid_username">Alias no válido</string>
    <string name="invalid_password">La contraseña debe tener al menos 6 caracteres</string>
    <string name="login_failed">Login fallido</string>
    <string name="registro_exitoso">Registro exitoso</string>
    <string name="registro_fallido">Error en el registro</string>
    <string name="perfil_no_encontrado">Perfil no encontrado</string>
    <string name="error_cargando">Error cargando datos</string>
    <string name="error_guardando">Error guardando datos</string>
    <string name="error_eliminando">Error eliminando datos</string>
    <string name="error_migrando">Error migrando datos</string>
    <string name="evento_creado">Evento creado correctamente</string>
    <string name="evento_actualizado">Evento actualizado</string>
    <string name="evento_borrado">Evento eliminado</string>
    <string name="usuario_expulsado">Usuario expulsado</string>

    <!-- Textos informativos -->
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="futbol">Fútbol</string>
    <string name="plazas">Plazas disponibles</string>
    <string name="sin_eventos">No hay eventos disponibles</string>
    <string name="sin_inscritos">No hay inscritos en este evento</string>

    <!-- Arrays -->
    <string-array name="roles_array">
        <item>Usuario Particular</item>
        <item>Ayuntamiento</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="splash_fragment_label">Splash Fragment</string>
    <string name="auth_fragment_label">Auth Fragment</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="sign_in_fragment_label">Login Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="inicio">Inicio</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="ver_deportes_disponibles">Ver deportes disponibles</string>
    <string name="deporte">Deporte</string>
    <string name="ayuntamiento">Ayuntamiento</string>

    <!-- Menú -->
    <string name="editar_informacion_del_usuario">Editar información del usuario</string>
    <string name="cambiar_foto_de_perfil">Cambiar foto de perfil</string>
    <string name="cambiar_ayuntamiento">Cambiar ayuntamiento</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio_ayuntamiento">inicio_ayuntamiento</string>
    <string name="inscritos">inscritos</string>
    <string name="ubicacion">Ubicacion</string>
</resources>
