<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Botón con submenú -->
    <item
        android:id="@+id/action_editar_info_usuario"
        android:title="@string/editar_informacion_del_usuario"
        android:icon="@drawable/ic_menu_burger"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_cambiar_foto_perfil"
                android:title="@string/cambiar_foto_de_perfil" />

            <item
                android:id="@+id/action_gestion_eventos_mas_plazas"
                android:title="@string/gestionar_eventos" />

            <item
                android:id="@+id/action_cerrarSesion"
                android:title="@string/logout"
                android:icon="@android:drawable/ic_lock_power_off"
                app:showAsAction="ifRoom" />
        </menu>


    </item>



</menu>
