<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Header superior con título -->
    <LinearLayout
        android:id="@+id/txtTituloPantalla"
        android:background="@drawable/bg_blanco_degradado_cabeceras_titulos"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:elevation="10dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp">

        <!-- Título de la Pantalla -->
        <TextView
            android:id="@+id/tvTituloPantalla"
            android:text="@string/seleccion_ayuntamiento"
            android:textFontWeight="700"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:textAlignment="gravity" />
    </LinearLayout>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarSeleccionAyto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:title="@string/cambiar_ayuntamiento"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardSelector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarSeleccionAyto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_contenedor_glass"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp" >

            <!-- Comunidad -->
            <TextView
                android:layout_width="match_parent"
                android:background="@color/colorSecondaryContainer"
                android:layout_height="wrap_content"
                android:text="@string/prompt_comunidad"
                android:textFontWeight="800"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:paddingLeft="10dp" />

            <Spinner
                android:id="@+id/spComunidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space android:layout_width="0dp" android:layout_height="8dp"/>

            <!-- Provincia -->
            <TextView
                android:layout_width="match_parent"
                android:background="@color/colorSecondaryContainer"
                android:layout_height="wrap_content"
                android:text="@string/prompt_provincia"
                android:textFontWeight="800"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:paddingLeft="10dp" />

            <Spinner
                android:id="@+id/spProvincia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space android:layout_width="0dp" android:layout_height="8dp"/>

            <!-- Ciudad -->
            <TextView
                android:layout_width="match_parent"
                android:background="@color/colorSecondaryContainer"
                android:layout_height="wrap_content"
                android:text="@string/prompt_ciudad"
                android:textFontWeight="800"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:paddingLeft="10dp" />

            <Spinner
                android:id="@+id/spCiudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space android:layout_width="0dp" android:layout_height="8dp"/>

            <!-- Pueblo -->
            <TextView
                android:layout_width="match_parent"
                android:background="@color/colorSecondaryContainer"
                android:layout_height="wrap_content"
                android:text="@string/prompt_pueblo"
                android:textFontWeight="800"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:paddingLeft="10dp" />

            <Spinner
                android:id="@+id/spPueblo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space android:layout_width="0dp" android:layout_height="12dp"/>

            <!-- Nombre del pueblo elegido (solo lectura) -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPuebloNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_pueblo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPuebloNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Space android:layout_width="0dp" android:layout_height="8dp"/>

            <!-- Ayuntamiento (auto) (solo lectura) -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAytoNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cambiar_ayuntamiento">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAytoNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Space android:layout_width="0dp" android:layout_height="12dp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Botón Guardar -->

    <!-- Botón Cancelar cambio -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGuardar"
        style="@style/BotonGenericoBlanco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/guardar"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="576dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancelar"
        style="@style/BotonGenericoBlanco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:text="Cancelar cambio"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGuardar" />


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
